# screenrecorder-ubports

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clickable.yaml  lomiri-screen-recorder.desktop.in  lomiri-screen-recorder.indicator  main.cpp  manifest.json.in  ru.po  screenrecorder-urldispatcher.json  screenrecorder.apparmor  screenrecorder.desktop.in  screenrecorder.ubports_1.2.1_armhf.click
debian/: changelog  control  copyright  lomiri-screen-recorder.install  rules
plugins/: CMakeLists.txt
plugins/ScreenRecorder/: CMakeLists.txt  aacconverter.h  buffer.cpp  buffer.h  bufferqueue.cpp  bufferqueue.h  controller.cpp  controller.h  example.cpp  example.h  h264encoder.cpp  h264encoder.h  indicator.cpp  indicator.h  minimp4.h  non_copyable.h  plugin.cpp  plugin.h  qmldir  screen_recorder.cpp  screen_recorder.h  screencast.cpp  screencast.h
plugins/ScreenRecorder/captures/: capture.h  mir.cpp  mir.h
plugins/ScreenRecorder/encoders/: android_h264.cpp  android_h264.h  encoder.h
plugins/ScreenRecorder/hybris/: media_message.h  media_meta_data.h
plugins/ScreenRecorder/muxers/: mp4.cpp  mp4.h  mux.h
po/: ar.po  ca.po  cs_CZ.po  de.po  jp.po  nl.po  pt_PT.po  screenrecorder.ubports.pot  tg.po
qml/: Main.qml
